<resources>
    <string name="app_name">ToDings</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todings">ToDings</string>
    <string name="create_new_to_dings">Create new ToDings</string>
    <string name="sort">Sort</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="the_priority_of_the_todo_item">The priority of the ToDo item</string>
    <string name="button_to_check_the_todo_item">Button to check the ToDo item</string>
    <string name="todo_checkbox">ToDo Checkbox</string>
    <string name="to_dings_title">ToDings Title</string>
    <string name="description">Description</string>
    <string name="the_title_of_your_todings">The title of your ToDings</string>
    <string name="describe_your_todings_what_is_it_about">Describe your ToDings. What is it about?</string>
    <string name="deadline">Deadline</string>
    <string name="save">Save</string>
    <string name="back_to_overview">Back to overview</string>
    <string name="delete_this_todings">Delete this ToDings</string>
    <string name="add_new_todings">Add new ToDings</string>
    <string name="delete_all_todings">Delete all ToDings</string>
    <string name="delete_all_remote_todings">Delete all remote ToDings</string>
    <string name="sync_todings_to_server">Sync ToDings to server</string>
    <string name="done_status">Sort by done status</string>
    <string name="sort_by_priority_date">Sort by priority + date</string>
    <string name="sort_by_date_priority">Sort by date + priority</string>
    <string name="get_todings_from_server">Get ToDings from server</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="mail_address">Your mail address</string>
    <string name="the_super_secret_password">The super secret password</string>
    <string name="please_provide_valid_credentials">Please provide valid credentials</string>
</resources>