<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/Theme.ToDings.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_border"
        android:padding="20dp"
        tools:context=".overview.activities.OverviewActivity">


        <EditText
            android:id="@+id/title_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:autofillHints="Title of ToDo"
            android:background="@drawable/bg_border_thin"
            android:hint="@string/the_title_of_your_todings"
            android:inputType="text"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@id/guideline_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/deadline"
            android:layout_width="0dp"
            android:hint="@string/deadline"
            android:layout_marginTop="10dp"
            android:layout_height="50dp"
            android:autofillHints="Deadline"
            android:background="@drawable/bg_border_thin"
            android:inputType="date"
            android:padding="5dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_edit" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_after_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/deadline" />

        <LinearLayout
            android:id="@+id/priority"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/the_priority_of_the_todo_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_image"
            app:layout_constraintBottom_toTopOf="@id/guideline_after_deadline">

            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_border_thin"
            android:hint="@string/describe_your_todings_what_is_it_about"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deadline" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="237dp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/guideline_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_edit">
            <ImageView
                android:id="@+id/to_do_item_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_unchecked"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/todo_checkbox" />
        </FrameLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>