<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/Theme.ToDings"
            app:popupTheme="@style/Theme.ToDings.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:background="@drawable/bg_border"
        android:layout_marginTop="70dp">
        <TextView
            android:id="@+id/login_headline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="40sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_margin="10dp"
            android:text="@string/login"/>

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressSpinner"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/login_headline"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_mail_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_headline"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/bg_border_thin"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_mail_edit_text"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="match_parent"
                android:hint="@string/mail_address" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/login_password_input_layout"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_mail_input_layout"
            android:layout_margin="10dp"
            android:background="@drawable/bg_border_thin"
            app:errorEnabled="true"
            android:padding="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/login_password_edit_text"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:hint="@string/the_super_secret_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_error"
            android:visibility="invisible"
            android:textColor="@color/design_default_color_error"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/login_password_input_layout"
            android:text="@string/please_provide_valid_credentials"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/login_error"
            android:layout_margin="10dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>